Fix contrast ratio

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,7 +33,7 @@ footer {
     a {
         text-decoration: none;
         opacity: 0.75;
-        color: rgb(31, 172, 153);
+        color:#06f8d7;
     }
     
     a:hover {
